# LabCD

./: .gitignore  README.md  README_EN.md  labcd.cpp  labcd.h  labcd.qrc  main.cpp
docs/: Download_and_usage.md  Download_and_usage_en.md  Keyboard_shortcuts.md  Keyboard_shortcuts_en.md  Usage_tutorial.md  Usage_tutorial_en.md
labcd/: .editorconfig  CMakeLists.txt  LabCD.pri  LabCD.pro  LabCD.sln  LabCD.vcxproj  LabCD.vcxproj.filters  labcd.cpp  labcd.h  labcd.qrc  main.cpp
labcd/configs/: colormap.txt  setting.ini
labcd/depends/include/opencv2/: calib3d.hpp  core.hpp  imgproc.hpp  objdetect.hpp  videoio.hpp
labcd/depends/include/opencv2/core/: bindings_utils.hpp  cv_cpu_dispatch.h  cvdef.h  dualquaternion.inl.hpp  quaternion.inl.hpp  types.hpp  version.hpp
labcd/depends/include/opencv2/core/hal/: intrin_avx.hpp  intrin_avx512.hpp  intrin_rvv.hpp  intrin_sse.hpp
labcd/depends/include/opencv2/dnn/: all_layers.hpp  dnn.hpp  version.hpp
labcd/depends/include/opencv2/gapi/: core.hpp  garg.hpp  garray.hpp  gcommon.hpp  gcomputation.hpp  gkernel.hpp  gopaque.hpp  gscalar.hpp  gtransform.hpp  gtype_traits.hpp  gtyped.hpp  opencv_includes.hpp  rmat.hpp  s11n.hpp
labcd/depends/include/opencv2/gapi/cpu/: gcpukernel.hpp
labcd/depends/include/opencv2/gapi/infer/: ie.hpp
labcd/depends/include/opencv2/gapi/own/: types.hpp
labcd/depends/include/opencv2/gapi/s11n/: base.hpp
labcd/depends/include/opencv2/gapi/streaming/gstreamer/: gstreamerpipeline.hpp  gstreamersource.hpp
labcd/depends/include/opencv2/gapi/streaming/onevpl/: cfg_params.hpp  data_provider_interface.hpp  device_selector_interface.hpp  source.hpp
labcd/depends/include/opencv2/stitching/detail/: matchers.hpp
labcd/depends/lib/: jsoncpp.exp  jsoncpp.lib  jsoncpp_static.lib  jsoncppd.exp  jsoncppd.lib  opencv_world455.lib  opencv_world455d.lib
labcd/i18/: English.qm
labcd/i18n/: English.qm  English.ts
labcd/utils/: colormap.cpp  colormap.h  fileworker.cpp  fileworker.h  imgpress.cpp  imgpress.h  label.cpp  label.h
labcd/widgets/: annotationscence.cpp  annotationscence.h  annotationview.cpp  annotationview.h  canvas.cpp  canvas.h  filelist.cpp  filelist.h  labeltable.cpp  labeltable.h  labgrid.cpp  labgrid.h  labline.cpp  labline.h  labpolygon.cpp  labpolygon.h  multcanvas.cpp  multcanvas.h  opttypes.h
paper/: paper.bib  paper.md
